--- a/pages/pk/invite/invite.wxml
+++ b/pages/pk/invite/invite.wxml
@@ -4,11 +4,12 @@
 
 
 
-<view style="height:{{top+32}}px"></view>
 
-<view class="h-30"></view> 
 
 <view wx:if="{{pks.length > 0}}" class="css z2" >
+    <view style="height:{{top+32}}px"></view>
+
+    <view class="h-30"></view> 
     <view class="css">
     
 
@@ -150,9 +151,9 @@
     </view>
 
 </view>
-<view wx:else class="ccc z2 "  style="padding-top:20vh">
+<view wx:else class="ccc z2 "  style="height:100vh">
     <view class="rcc">
-        <image class="h-400 w-400" mode="aspectFit" src="{{emptyImage}}" ></image>
+        <image class="h-400 w-400" mode="aspectFit" src="/images/nocollect.png" ></image>
     </view>
     <view class="fs-30 fw-300 c-3">暂无收藏</view>
 
