--- a/pages/pk/hiddentimepage/hiddentimepage.wxml
+++ b/pages/pk/hiddentimepage/hiddentimepage.wxml
@@ -112,9 +112,9 @@
     </view> 
     <view wx:else class="ccc"  style="flex:1">
         <view class="rcc">
-            <image class="h-400 w-400" mode="aspectFit" src="{{emptyImage}}" ></image>
+            <image class="h-400 w-400" mode="aspectFit" src="/images/emptydata.png" ></image>
         </view>
-        <view class="fs-30 fw-300 c-3">暂无卡贴</view>
+        <view class="fs-30 fw-300 c-3">空空如也</view>
     </view>
 
 
