--- a/style/custom2.wxss
+++ b/style/custom2.wxss
@@ -1552,6 +1552,16 @@ mw-200{
   word-break:break-all;
   text-align: center;
 }
+.line-center{
+  word-wrap: break-word;
+  display:-webkit-box;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  -webkit-line-clamp:100;
+  -webkit-box-orient:vertical;
+  word-break:break-all;
+  text-align: center;
+}
 .line-100-center{
   word-wrap: break-word;
   display:-webkit-box;
